--- a/api/package.json
+++ b/api/package.json
@@ -18,9 +18,11 @@
     "homepage": "https://github.com/uea-geral/coinback#readme",
     "description": "",
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.19.2"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/jest": "^29.5.12",
         "@types/node": "^20.12.12",
@@ -33,7 +35,6 @@
         "prettier": "^3.2.5",
         "ts-jest": "^29.1.3",
         "ts-node": "^10.9.2",
-        "typescript": "^5.4.5",
-        "typescript-eslint": "^7.10.0"
+        "typescript": "^5.4.5"
     }
 }
