--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "swr": "^2.2.5"
+    "react-icons": "^5.2.1",
+    "swr": "^2.2.5",
+    "web3": "^4.11.0"
   },
   "devDependencies": {
     "@types/node": "^20",
