--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,14 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "swr": "^2.2.5",
+    "uuid": "^10.0.0",
     "web3": "^4.11.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "typescript": "^5"
